Rename bot from 'WolfBot' to 'Soccia-MD'

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "WolfBot",
+  "name": "Soccia-MD",
   "description": "A powerful Baileys WhatsApp bot with wolf-themed features.",
   "repository": "https://github.com/777Wolf-dot/Silent-Wolf--Bot",
   "logo": "https://i.ibb.co/HDCwvyhT/wolfbot.jpg",
